// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors/life should get life state 1`] = `
Object {
  "credentials": Object {
    "clientId": "1234",
    "clientSecret": "5678",
  },
  "status": true,
}
`;

exports[`selectors/life should get life status 1`] = `true`;

exports[`selectors/life should get lifeCredentialsSelector 1`] = `
Object {
  "clientId": "1234",
  "clientSecret": "5678",
}
`;
